Pilmico Foods Corporation Digital Data Analyst | SmartRecruiters. Marketplace Data Analyst - ZALORA SEA - Career Page. Strategic Insight Junior Data Analyst | SmartRecruiters. Principal Biostatistician - PPD Careers. Massive Insights Statistician | SmartRecruiters. Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page. Progressive technology solutions Data Analyst | SmartRecruiters. Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers. Premise Health Careers - Member Health Management Data Analyst. Premier Research Careers - Senior Biostatistician. Premier Research Careers - Principal Biostatistical Programmer. Sr Statistical Programmer - Syneos Health Careers. The Climate Corporation Careers - Data Scientist - Statistics. Data Analyst - Apply online - 605 - Jobs. Marketing Acquistion Data Analyst - Apply online - BDSwiss - Jobs. Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs. Marketing Data Analyst - Apply online - Softheon - Jobs. Job Application for Data Analyst at Nubank. Job Application for Senior Healthcare Data Analyst at Aver Inc.. Job Application for Data Analyst at Join the Lively team!. Job Application for Data Analyst at IgnitionOne. Job Application for Data Analyst - Returnship at Cloudflare. O2E Brands - Data Analyst - O2E Brands. PSI CRO Senior Statistician | SmartRecruiters. PSI CRO Senior Statistician | SmartRecruiters. Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore. Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters. Analytics Developer-Data Analyst-21687/21688 #0238 job at Radiant Digital in Irving, TX, powered by JobScore. Revance Therapeutics, Inc. Careers - Senior Biostatistician. Veristat Careers - Manager of Statistical Programming. Octopus Data Analyst | SmartRecruiters. Crime Data Analyst I - ELSEVIER Careers. Job Application for Marketing Data Analyst at Airship. Job Application for Marketing D

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -104,10 +104,18 @@
 <p>2 days ago ... Apply online for the job of Data Analyst at 605. ... Data Analyst. Data Analyst. 
 Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
 <hr/>
+<h5><a href='https://bdswiss.workable.com/jobs/1069250'>Marketing Acquistion Data Analyst - Apply online - BDSwiss - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Marketing Acquistion Data Analyst at BDSwiss.</p>
+<hr/>
 <h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Governance Business Analyst at Eurobank 
 Ergasias SA.</p>
+<hr/>
+<h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Marketing Data Analyst at Softheon.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/nubank/jobs/1776014'>Job Application for Data Analyst at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -155,7 +163,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -190,7 +198,7 @@ LexisNexis to include tactical, strategic, administrative, and operational...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://colorado.avature.net/jobs/JobDetail?jobId=19728'>Quantitative Data Analyst and Liaison</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorado.avature.net/jobs/JobDetail?jobId=19728'>Quantitative Data Analyst and Liaison</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... The Renee Crown Wellness Institute seeks a Quantitative Data Analyst and 
 Liaison (QDAL) with advanced Stata skills who can oversee all the quantitative 
@@ -253,7 +261,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692250175-data-analyst-senior-insight-analytics'>Numberly Data Analyst Senior - Insight & Analytics | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692250175-data-analyst-senior-insight-analytics'>Numberly Data Analyst Senior - Insight & Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -265,7 +273,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
+<h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Greece</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -472,14 +480,6 @@ South Carolina. Apply. Description. Description. Want to be a part of a growing?
 <hr/>
 <h5><a href='https://jobs.lever.co/criteo/a8b10204-5503-4673-aa93-f9b2d9d53163'>Criteo - Data Analyst, Large Customers</a></h5> 
 <p><span class="badge badge-light">Sydney Paris</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/quotient/job/oF6Cafwh'>Quotient Technology Inc. Careers - Data Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999692139315-data-analyst-data-content-operations'>CPP Investment Board Data Analyst, Data Content Operations | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
